--- a/src/components/profile/addProduct/addProduct.module.css
+++ b/src/components/profile/addProduct/addProduct.module.css
@@ -1,64 +1,64 @@
 .addProduct {
-    width: 100%;
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    flex-direction: column;
-    padding: 2rem clamp(.5rem, 2vw, 2rem);
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  padding: 2rem clamp(0.5rem, 2vw, 2rem);
 }
 
 .addProduct .header {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 .addProduct .header h5 {
-    color: #888;
-    font-size: clamp(.9rem, 1.2vw, 1.2rem);
+  color: #888;
+  font-size: clamp(0.9rem, 1.2vw, 1.2rem);
 }
 .addProduct .header span {
-    color: #888;
-    font-size: clamp(1rem, 1.3vw, 1.3rem);
-    margin: 0 1rem;
+  color: #888;
+  font-size: clamp(1rem, 1.3vw, 1.3rem);
+  margin: 0 1rem;
 }
 
 .addProduct .footer {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 .addProduct .footer button {
-    color: #fff;
-    background: rgb(25, 118, 210);
-    border: none;
-    border-radius: 2rem;
-    padding: 0 clamp(.9rem, 1.3vw, 1.3rem);
-    width: clamp(8rem, 12vw, 12rem);
-    height: clamp(2.5rem, 4vw, 4rem);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all .2s;
-    overflow: hidden;
+  color: #fff;
+  background: rgb(25, 118, 210);
+  border: none;
+  border-radius: 2rem;
+  padding: 0 clamp(0.9rem, 1.3vw, 1.3rem);
+  width: clamp(8rem, 12vw, 12rem);
+  height: clamp(2.5rem, 4vw, 4rem);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.2s;
+  overflow: hidden;
 }
 .addProduct .footer button:hover {
-    cursor: pointer;
-    background: rgb(10, 92, 62);
+  cursor: pointer;
+  background: rgb(10, 92, 62);
 }
 
 .addProduct .footer img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-    background: transparent;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  background: transparent;
 }
 .addProduct .footer p {
-    width: 100%;
-    text-align: center;
+  width: 100%;
+  text-align: center;
 }
 
 .addProduct .name_grouping,
@@ -66,29 +66,28 @@
 .addProduct .weight,
 .addProduct .send,
 .addProduct .attributes {
-    width: 100%;
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    margin: 2rem 0;
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  margin: 2rem 0;
 }
-
 
 .addProduct .name_grouping .icon,
 .addProduct .images .icon,
 .addProduct .weight .icon,
 .addProduct .send .icon,
 .addProduct .attributes .icon {
-    width: 4rem;
-    height: 4rem;
-    border-radius: 50%;
-    border: 1px solid #888;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 2rem;
-    margin: 0 0 0 1rem;
-    padding: 0 .1rem .1rem 0;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  border: 1px solid #888;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
+  margin: 0 0 0 1rem;
+  padding: 0 0.1rem 0.1rem 0;
 }
 
 .addProduct .name_grouping .box,
@@ -96,14 +95,14 @@
 .addProduct .weight .box,
 .addProduct .send .box,
 .addProduct .attributes .box {
-    width: 100%;
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    flex-direction: column;
-    padding: 1rem;
-    border: 1px solid #888;
-    border-radius: 1rem;
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  padding: 1rem;
+  border: 1px solid #888;
+  border-radius: 1rem;
 }
 
 .addProduct .name_grouping .box .title,
@@ -111,17 +110,17 @@
 .addProduct .weight .box .title,
 .addProduct .send .box .title,
 .addProduct .attributes .box .title {
-    color: #333;
-    font-size: clamp(1.2rem, 1.4vw, 1.4rem);
-    margin: 0 0 1.5rem 0;
+  color: #333;
+  font-size: clamp(1.2rem, 1.4vw, 1.4rem);
+  margin: 0 0 1.5rem 0;
 }
 
 .addProduct .name_grouping .box h4,
 .addProduct .images .box h4 {
-    color: #555;
-    font-weight: 300;
-    font-size: clamp(.9rem, 1.1vw, 1.1rem);
-    margin: 1.5rem 0;
+  color: #555;
+  font-weight: 300;
+  font-size: clamp(0.9rem, 1.1vw, 1.1rem);
+  margin: 1.5rem 0;
 }
 
 .addProduct .name_grouping .box .boxinput,
@@ -129,18 +128,18 @@
 .addProduct .send .box .boxinput,
 .addProduct .send .box .boxradio,
 .addProduct .attributes .box .boxinput {
-    width: 100%;
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    flex-direction: column;
-    margin: 1.5rem 0;
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  margin: 1.5rem 0;
 }
 
 .addProduct .weight .box .boxinput p {
-    color: #555;
-    font-size: clmap(.7rem, 1vw, 1rem);
-    margin: 1rem 0 0 0;
+  color: #555;
+  font-size: clmap(0.7rem, 1vw, 1rem);
+  margin: 1rem 0 0 0;
 }
 
 .addProduct .name_grouping .box .boxinput label,
@@ -148,335 +147,330 @@
 .addProduct .send .box .boxinput label,
 .addProduct .send .box .boxradio label,
 .addProduct .attributes .box .boxinput label {
-    color: #333;
-    font-size: clamp(1rem, 1.2vw, 1.2rem);
+  color: #333;
+  font-size: clamp(1rem, 1.2vw, 1.2rem);
 }
 
 .addProduct .name_grouping .box .boxinput input {
-    width: 98.8%;
-    padding: .6rem .5rem;
-    border: 1px solid #999;
-    border-radius: .5rem;
-    margin: 1rem 0;
-    background: #fff;
-    outline: none;
+  width: 98.8%;
+  padding: 0.6rem 0.5rem;
+  border: 1px solid #999;
+  border-radius: 0.5rem;
+  margin: 1rem 0;
+  background: #fff;
+  outline: none;
 }
 .addProduct .name_grouping .box .boxinput input::placeholder,
 .addProduct .weight .box .boxinput input::placeholder,
 .addProduct .attributes .box .boxattribute input:nth-child(1),
 .addProduct .attributes .box .boxattribute input:nth-child(2) {
-    font-size: clamp(.9rem, 1.2vw, 1.2rem);
+  font-size: clamp(0.9rem, 1.2vw, 1.2rem);
 }
 
 .addProduct .name_grouping .box select {
-    width: 100%;
-    padding: .6rem .5rem;
-    border: 1px solid #999;
-    border-radius: .5rem;
-    outline: none;
-    color: #333;
-    font-size: clamp(1rem, 1.2vw, 1.2rem);
-    background: #fff;
+  width: 100%;
+  padding: 0.6rem 0.5rem;
+  border: 1px solid #999;
+  border-radius: 0.5rem;
+  outline: none;
+  color: #333;
+  font-size: clamp(1rem, 1.2vw, 1.2rem);
+  background: #fff;
 }
-
-
 
 /* ----------- Images ------------ */
 
 .addProduct .images .addImg {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    margin: .7rem 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin: 0.7rem 0;
 }
 
 .addProduct .images .boximage {
-    position: relative;
-    border: 1px dashed #888;
-    border-radius: .7rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: clamp(6rem, 8vw, 8rem);
-    height: clamp(6rem, 8vw, 8rem);
-    margin: 0 0 0 clamp(1rem, 5vw, 5rem);
+  position: relative;
+  border: 1px dashed #888;
+  border-radius: 0.7rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: clamp(6rem, 8vw, 8rem);
+  height: clamp(6rem, 8vw, 8rem);
+  margin: 0 0 0 clamp(1rem, 5vw, 5rem);
 }
 
 .addProduct .images .boximage input {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    top: 0;
-    left: 0;
-    border: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  border: none;
 }
 
 .addProduct .images .boximage input:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .addProduct .images .boximage svg {
-    color: #777;
-    font-size: clamp(1.5rem, 2.5vw, 2.5rem);
+  color: #777;
+  font-size: clamp(1.5rem, 2.5vw, 2.5rem);
 }
 .addProduct .images .boximage p {
-    color: #777;
-    font-size: clamp(.7rem, 1vw, 1rem);
-    text-align: center;
+  color: #777;
+  font-size: clamp(0.7rem, 1vw, 1rem);
+  text-align: center;
 }
 
 .addProduct .images .addImg .listImage {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: row;
 }
 
 .addProduct .images .addImg .listImage .img {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    padding: .3rem 1rem;
-    border: 1px solid #888;
-    border-radius: .7rem;
-    margin: .5rem 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 0.3rem 1rem;
+  border: 1px solid #888;
+  border-radius: 0.7rem;
+  margin: 0.5rem 0;
 }
 
 .addProduct .images .addImg .listImage .img button {
-    color: rgb(210, 25, 25);
-    font-size: clamp(2rem, 2.5vw, 2.5rem);
-    margin: 0 0 0 1rem;
+  color: rgb(210, 25, 25);
+  font-size: clamp(2rem, 2.5vw, 2.5rem);
+  margin: 0 0 0 1rem;
 }
-
 
 /* ----------- Weight ------------ */
 
 .addProduct .weight .box .boxadd {
-    width: 40%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: .8rem 1rem;
-    border: 1px solid #999;
-    border-radius: .5rem;
-    background: #fff;
-    margin: 1rem 0 0 0;
+  width: 40%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.8rem 1rem;
+  border: 1px solid #999;
+  border-radius: 0.5rem;
+  background: #fff;
+  margin: 1rem 0 0 0;
 }
 
 .addProduct .weight .box .boxadd button,
 .addProduct .weight .box .boxadd span {
-    color: #555;
-    font-size: clamp(1rem, 2vw, 2rem);
+  color: #555;
+  font-size: clamp(1rem, 2vw, 2rem);
 }
 
 .addProduct .weight .box .boxadd button:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .addProduct .weight .box .boxinput .input input {
-    width: 100%;
-    background: transparent;
-    border: none;
-    outline: none;
+  width: 100%;
+  background: transparent;
+  border: none;
+  outline: none;
 }
 
 .addProduct .weight .box .boxinput .input select {
-    width: 20%;
-    min-width: 100px;
-    height: 100%;
-    background: rgba(192, 197, 195, 0.444);
-    border: none;
-    outline: none;
-    border-right: 1px solid #999;
-    padding: .6rem;
+  width: 20%;
+  min-width: 100px;
+  height: 100%;
+  background: rgba(192, 197, 195, 0.444);
+  border: none;
+  outline: none;
+  border-right: 1px solid #999;
+  padding: 0.6rem;
 }
 
 .addProduct .weight .box .boxinput .input select:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .addProduct .weight .box .boxinput .input {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: .6rem .5rem;
-    border: 1px solid #999;
-    border-radius: .5rem;
-    background: #fff;
-    margin: 1rem 0 0 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.6rem 0.5rem;
+  border: 1px solid #999;
+  border-radius: 0.5rem;
+  background: #fff;
+  margin: 1rem 0 0 0;
 }
 
 .addProduct .weight .box .boxinput:nth-child(2) .input {
-    padding: 0 .5rem 0 0;
+  padding: 0 0.5rem 0 0;
 }
-
 
 /* ----------- Send ------------ */
 
 .addProduct .send .box .boxradio .input {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 .addProduct .send .box .boxradio .input input {
-    width: 3rem;
-    height: 3rem;
-    border-radius: 50%;
-    all: revert;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  all: revert;
 }
 
 .addProduct .send .box .boxradio .input input:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .addProduct .send .box .boxinput select {
-    width: 100%;
-    padding: .6rem .5rem;
-    border: 1px solid #999;
-    border-radius: .5rem;
-    outline: none;
-    color: #333;
-    font-size: clamp(1rem, 1.2vw, 1.2rem);
-    background: #fff;
-    margin: 1rem 0 0 0;
+  width: 100%;
+  padding: 0.6rem 0.5rem;
+  border: 1px solid #999;
+  border-radius: 0.5rem;
+  outline: none;
+  color: #333;
+  font-size: clamp(1rem, 1.2vw, 1.2rem);
+  background: #fff;
+  margin: 1rem 0 0 0;
 }
 
 .addProduct .send .box .boxinput .input {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: .6rem .5rem;
-    border: 1px solid #999;
-    border-radius: .5rem;
-    background: #fff;
-    margin: 1rem 0 0 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.6rem 0.5rem;
+  border: 1px solid #999;
+  border-radius: 0.5rem;
+  background: #fff;
+  margin: 1rem 0 0 0;
 }
 
 .addProduct .send .box .boxinput:nth-child(2) .input {
-    padding: 0 .5rem 0 0;
+  padding: 0 0.5rem 0 0;
 }
 
 .addProduct .send .box .boxinput .input input {
-    width: 100%;
-    background: transparent;
-    border: none;
-    outline: none;
+  width: 100%;
+  background: transparent;
+  border: none;
+  outline: none;
 }
 
 .addProduct .send .box .boxinput textarea {
-    width: 90%;
-    min-width: 90%;
-    max-width: 90%;
-    height: clamp(15vh, 20vh, 20vh);
-    max-height: clamp(15vh, 20vh, 20vh);
-    min-height: clamp(15vh, 20vh, 20vh);
-    border: 1px solid #888;
-    border-radius: .7rem;
-    outline: none;
-    margin: 2rem 0 0 0;
-    padding: clamp(.5rem, 1vw, 1rem);
+  width: 90%;
+  min-width: 90%;
+  max-width: 90%;
+  height: clamp(15vh, 20vh, 20vh);
+  max-height: clamp(15vh, 20vh, 20vh);
+  min-height: clamp(15vh, 20vh, 20vh);
+  border: 1px solid #888;
+  border-radius: 0.7rem;
+  outline: none;
+  margin: 2rem 0 0 0;
+  padding: clamp(0.5rem, 1vw, 1rem);
 }
 /* ----------- Attributes ------------ */
 
 .addProduct .attributes .box .header {
-    width: 90%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0 0 2rem 0;
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 0 2rem 0;
 }
 
 .addProduct .attributes .box .header h4 {
-    color: #555;
-    font-size: clamp(.9rem, 1.2vw, 1.2rem);
+  color: #555;
+  font-size: clamp(0.9rem, 1.2vw, 1.2rem);
 }
 
 .addProduct .attributes .box .header button {
-    color: rgb(25, 118, 210);
-    font-size: clamp(2rem, 2.5vw, 2.5rem);
+  color: rgb(25, 118, 210);
+  font-size: clamp(2rem, 2.5vw, 2.5rem);
 }
 .addProduct .attributes .box .header button:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .addProduct .attributes .box .boxattribute {
-    width: 80%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: .5rem 0;
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0.5rem 0;
 }
 
 .addProduct .attributes .box .boxattribute input:nth-child(1) {
-    width: 40%;
-    background: #fff;
-    border: 1px solid #888;
-    border-radius: .7rem;
-    padding: .5rem;
+  width: 40%;
+  background: #fff;
+  border: 1px solid #888;
+  border-radius: 0.7rem;
+  padding: 0.5rem;
 }
 
 .addProduct .attributes .box .boxattribute input:nth-child(2) {
-    width: 25%;
-    background: #fff;
-    border: 1px solid #888;
-    border-radius: .7rem;
-    padding: .5rem;
+  width: 25%;
+  background: #fff;
+  border: 1px solid #888;
+  border-radius: 0.7rem;
+  padding: 0.5rem;
 }
 
 .addProduct .attributes .box .boxattribute button {
-    color: rgb(210, 25, 25);
-    font-size: clamp(2rem, 2.5vw, 2.5rem);
+  color: rgb(210, 25, 25);
+  font-size: clamp(2rem, 2.5vw, 2.5rem);
 }
 
 .addProduct .attributes .box .boxattribute button:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .addProduct .attributes .box .boxinput textarea {
-    width: 90%;
-    min-width: 90%;
-    max-width: 90%;
-    height: clamp(15vh, 20vh, 20vh);
-    max-height: clamp(15vh, 20vh, 20vh);
-    min-height: clamp(15vh, 20vh, 20vh);
-    border: 1px solid #888;
-    border-radius: .7rem;
-    outline: none;
-    margin: 2rem 0 0 0;
-    padding: clamp(.5rem, 1vw, 1rem);
+  width: 90%;
+  min-width: 90%;
+  max-width: 90%;
+  height: clamp(15vh, 20vh, 20vh);
+  max-height: clamp(15vh, 20vh, 20vh);
+  min-height: clamp(15vh, 20vh, 20vh);
+  border: 1px solid #888;
+  border-radius: 0.7rem;
+  outline: none;
+  margin: 2rem 0 0 0;
+  padding: clamp(0.5rem, 1vw, 1rem);
 }
 
 .attributes .box .boxinput_checked {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    margin: 3rem 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin: 3rem 0;
 }
 
 .attributes .box .boxinput_checked label {
-    color: rgb(198, 74, 74);
-    font-size: clamp(1.2rem, 1.4vw, 1.4rem);
+  color: rgb(198, 74, 74);
+  font-size: clamp(1.2rem, 1.4vw, 1.4rem);
 }
 
 .attributes .box .boxinput_checked input {
-    width: 2.3rem !important;
-    height: 2.3rem !important;
-    margin: 0 0 0 1rem;
+  width: 2.3rem !important;
+  height: 2.3rem !important;
+  margin: 0 0 0 1rem;
 }
 .attributes .box .boxinput_checked input:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 @media (max-width: 600px) {
-    .addProduct .attributes .box .boxattribute {
-        width: 95%;
-    }
-
+  .addProduct .attributes .box .boxattribute {
+    width: 95%;
+  }
 }
